# Inforce-tesk-task

./: .env_sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/management/commands/: wait_for_db.py
core/middlewares/: version_middleware.py
menus/: admin.py  models.py  serializers.py  urls.py  views.py
menus/migrations/: 0001_initial.py  0002_alter_menu_dishes.py
restaurants/: admin.py  models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
tests/accounts/: test_accounts.py
tests/restaurants/: test_restaurants.py
tests/votes/: test_votes.py
votes/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
votes/migrations/: 0001_initial.py
